--- a/Views/Weather/Details.cshtml
+++ b/Views/Weather/Details.cshtml
@@ -4,41 +4,37 @@
 }
 
 <div>
-    <h2>Weather Forecast</h2>
+    <h2>Weather Forecast for: </h2>
     <table>
         <tr>
             <td>
-                Weather Symbol Icon
                 <img id="imgWeatherIconUrl" src="@ViewData["Icon"]" title="Weather Icon" />
+                @ViewData["Description"]
             </td>
         </tr>
-        @*<tr>
-                <td>
-                    <strong>City: </strong>
-                    <span id="lblCity"></span>&nbsp;&nbsp;,
-                    <span id="lblCountry"></span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Latitude: </strong>
-                    <label id="lblLat"></label><br />
-                    <strong>Longitude: </strong>
-                    <label id="lblLon"></label>
-                </td>
-            </tr>*@
+
         <tr>
             <td>
-                <strong>Description: </strong>
-                @ViewData["Description"]<br />
+                <strong>Temperature: </strong>
+                @ViewData["Temperature"]
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <strong>Humidity: </strong>
                 @ViewData["Humidity"]
             </td>
         </tr>
         <tr>
             <td>
-                <strong>Temperature: </strong>
-                @ViewData["Temperature"]
+                <strong>Wind speed: </strong>
+                @ViewData["WindSpeed"]
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <strong>Wind direction: </strong>
+                @ViewData["WindDirection"]
             </td>
         </tr>
     </table>
